<?xml version="1.0"?>
<package format="2">
  <name>my_lidar_listener</name>
  <version>0.0.0</version>
  <description>The my_lidar_listener package</description>

  <maintainer email="xnb@todo.todo">xnb</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROS和标准消息的构建依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <!-- PCL相关依赖 -->
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <!-- 导出构建依赖 -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <!-- 执行时依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <!-- PCL相关执行依赖 -->
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <export>
    <!-- 其他工具可以在此处请求附加信息 -->
  </export>
</package>
